Update README in the usr folder

--- a/pi_tab-source/usr/share/pi-tab/README
+++ b/pi_tab-source/usr/share/pi-tab/README
@@ -4,16 +4,14 @@
 #                             #
 ###############################
 
-instructions to install:
-	Extract the zip to your desktop
-	open up pcmanfm(the file browser)
-	double click Pi Tab Installer
-instructions to update:
-	On the menu go to other
-	Choose Pi Tab Updater
-	
-	or
-	
-	Open the terminal
-	Type "pi_tab_update"
+Instructions to install:
 
+Use git to clone the repo https://github.com/Geek202/pi-tab
+
+Move into the folder with:
+$ cd pi-tab
+
+run the command:
+$ sudo dpkg -i pi-tab.deb
+
+This will instruact the dpkg (the Debian package installer) to install the package.
